fix: video list overflow

--- a/release/PKU-Art.user.css
+++ b/release/PKU-Art.user.css
@@ -2077,6 +2077,11 @@ li.divider,
     background: var(--gray-1);
 }
 
+/* 录播表格限宽 */
+#containerdiv {
+    width: inherit;
+}
+
 /*感觉hover用不太到*/
 /*#listContainer_databody>tr:hover {*/
 /*	background: var(--c-hover);*/
